--- a/_posts/2023-12-10-Trippy.md
+++ b/_posts/2023-12-10-Trippy.md
@@ -4,10 +4,12 @@ tags:
   - Network
   - Anaytics
   - Tool
+  - console
 Date: 2023-12-10
 ---
 
 # Trippy
+
 https://trippy.cli.rs/
 
 Trippy combines the functionality of traceroute and ping and is designed to assist with the analysis of networking issues.
