--- a/_posts/2023-12-21_wireflow.md
+++ b/_posts/2023-12-21_wireflow.md
@@ -4,3 +4,4 @@ Wireflow is free, online and open source tool for creating beautiful user flow p
 
 https://github.com/vanila-io/wireflow
 
+![[Pasted image 20240115123409.png]]
