edited by obsidian desktop

--- a/_posts/2024-01-11_pi-car.md
+++ b/_posts/2024-01-11_pi-car.md
@@ -1,4 +1,11 @@
-https://projects-raspberry.com/pi-car/
+---
+Title: PiCar-X
+tags:
+  - Raspi
+Date: 2024-01-18
+---
+
+# https://projects-raspberry.com/pi-car/
 
 
 https://docs.sunfounder.com/projects/picar-x/en/latest/
