--- a/_posts/2023-12-25_diy_llm.md
+++ b/_posts/2023-12-25_diy_llm.md
@@ -48,3 +48,8 @@ https://huggingface.co/CultriX/MistralTrix-v1
 # Best 7B LLM on leaderboards made by an amateur following a medium tutorial
 
 https://huggingface.co/CultriX/MistralTrix-v1
+
+
+# 10 open-source tools for LLM applications development
+
+https://www.turingpost.com/p/llm-applications-tools
