--- a/_posts/2023-09-18-16-52-03_Geolocation.md
+++ b/_posts/2023-09-18-16-52-03_Geolocation.md
@@ -1,7 +1,12 @@
 ---
 created: 2023-09-18T16:52:03+02:00
 modified: 2023-12-12T19:50:18+01:00
+Title: Geolocation
+tags:
+  - Geo
+Date: 2024-01-24
 ---
+
 
 # Geolocation
 
