--- a/_posts/2023-09-18-18-17-08_illusion pages.md
+++ b/_posts/2023-09-18-18-17-08_illusion pages.md
@@ -1,6 +1,10 @@
 ---
 created: 2023-09-18T18:17:08+02:00
 modified: 2023-12-12T19:47:56+01:00
+Title: Akiyoshi's illusion pages
+tags:
+  - Illusion
+Date: 2024-01-24
 ---
 
 # Akiyoshi's illusion pages
