--- a/_posts/2023-09-18-18-17-39_OpenMoji.md
+++ b/_posts/2023-09-18-18-17-39_OpenMoji.md
@@ -1,6 +1,11 @@
 ---
 created: 2023-09-18T18:17:39+02:00
 modified: 2023-12-12T19:52:40+01:00
+Title: OpenMoji
+tags:
+  - Emoji
+  - OSS
+Date: 2024-01-24
 ---
 
 # OpenMoji 14.0.0
