--- a/_posts/2023-09-18-18-41-49.md
+++ b/_posts/2023-09-18-18-41-49.md
@@ -1,6 +1,16 @@
 ---
 created: 2023-09-18T18:41:49+02:00
 modified: 2023-09-18T18:41:54+02:00
+Title: Knot List
+tags:
+  - Haptic
+Date: 2024-01-25
 ---
+
+![](../_asset/2024-01-25-11-26-54.mp4)
+
+# (echte) Koten 
+
+Animated Knots by Grog is the web’s premiere site for learning how to tie knots of any kind. From [Boating Knots](https://www.animatedknots.com/boating-knots), [Fishing Knots](https://www.animatedknots.com/fishing-knots) and [Climbing Knots](https://www.animatedknots.com/climbing-knots) to [tying a tie](https://www.animatedknots.com/necktie-knots), or even [Surgical Knots](https://www.animatedknots.com/surgical-knots) — we’ve got it covered.
 
 https://www.animatedknots.com/
