--- a/_posts/2023-12-13_leafmap.md
+++ b/_posts/2023-12-13_leafmap.md
@@ -11,5 +11,33 @@ Date: 2023-12-13
 ---
 https://github.com/opengeos/leafmap
 # Leafmap
+![](../_asset/Pasted%20image%2020240125113749.png)
 
 A Python package for interactive mapping and geospatial analysis with minimal coding in a Jupyter environment
+
+## Demo JupytlerLite Wasm 
+
+![](../_asset/Pasted%20image%2020240125113657.png)
+
+## Examples
+
+![](../_asset/Pasted%20image%2020240125114238.png)
+
+https://github.com/opengeos/leafmap/tree/master/examples
+
+## Weitere Links
+## python-geospatial
+A collection of Python packages for geospatial analysis with binder-ready notebook examples. Launch the interactive notebook tutorials with **mybinder.org** or **binder.pangeo.io** test all the pre-installed Python pakcages for geospatial analysis.
+https://github.com/opengeos/python-geospatial
+
+### Awesome Earth Engine
+A curated list of Google Earth Engine resources. Please visit the [Awesome-GEE](https://github.com/giswqs/Awesome-GEE) GitHub repo if you want to contribute to this project.
+![](../_asset/Pasted%20image%2020240125115128.png)
+
+Example: https://code.earthengine.google.com/04d67399bf5577419f0ccc750fe4ff9f
+
+
+https://github.com/opengeos/Awesome-GEE
+https://spatialthoughts.com/2020/04/04/ndvi-time-series-gee-qgis/
+
+
