--- a/_posts/2023-09-18-19-16-33.md
+++ b/_posts/2023-09-18-19-16-33.md
@@ -1,6 +1,14 @@
 ---
 created: 2023-09-18T19:16:33+02:00
 modified: 2023-09-18T19:16:37+02:00
+Title: Surface Linux Installation and Setup
+tags:
+  - surfce
+  - Linux
+  - install
+Date: 2024-02-20
 ---
+
+# Installation and Setup
 
 https://github.com/linux-surface/linux-surface/wiki/Installation-and-Setup
