--- a/_posts/2023-09-28_DevPod.md
+++ b/_posts/2023-09-28_DevPod.md
@@ -1,7 +1,11 @@
 ---
 created: 2023-09-28T08:43:50+02:00
 modified: 2023-09-28T09:19:32+02:00
+Title: DevPod - Entwickeln auf entfernten Systemen
+tags: 
+Date: 2024-03-12
 ---
+
 
 # DevPod - Entwickeln auf entfernten Systemen 
 
